# time-mcp

./: .gitignore  README.md  fastmcp.json  pyproject.toml
src/: server.py
src/time_mcp/: __init__.py  server.py
